--- a/static/css/pages/dashboard.css
+++ b/static/css/pages/dashboard.css
@@ -75,6 +75,41 @@
   margin-bottom: 17px;
 }
 
+.dashboard-page .locked-tokens-section .additional-token-metrics .subtitle {
+  margin-bottom: 32px;
+  font-size: 14px;
+  font-weight: normal;
+}
+
+.dashboard-page .locked-tokens-section hr {
+  width: 100%;
+  height: 1px;
+  background-color: #fafbfc;
+  margin-bottom: 60px;
+}
+
+.dashboard-page .locked-tokens-section .additional-token-metrics .metric-holder .metric:not(:last-child) {
+  margin-right: 45px;
+}
+
+.dashboard-page .locked-tokens-section .additional-token-metrics h3 {
+  margin-bottom: 29px;
+}
+
+.dashboard-page .locked-tokens-section .additional-token-metrics .metric {
+  max-width: 142px;
+  font-family: Lato;
+  font-size: 14px;
+  color: black;
+  font-weight: normal;
+  margin-bottom: 28px;
+}
+
+.dashboard-page .locked-tokens-section .additional-token-metrics .metric .value {
+  font-size: 24px;
+  font-weight: bold;
+}
+
 .dashboard-page .locked-token-widget {
   margin-top: 28px;
 }
