--- a/templates/ogn-token.html
+++ b/templates/ogn-token.html
@@ -31,7 +31,7 @@ endwith %}
           <div class="text">{{ogn_stats["formatted_market_cap"]}}</div>
         </div>
       </div>
-      <div class="subtitle2">{{gettext("Last updated on ")}}{{ogn_stats["created_at"]}}</div>
+      <div class="subtitle2">{{gettext("Last updated on ")}}{{ogn_stats["created_at_formatted"]}}</div>
       <div class="subtitle">{{gettext("Available on")}}</div>
       <div class="d-flex flex-column flex-md-row justify-content-center align-items-center exchange-holder">
         <div class="token-exchange feat">
