--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -103,25 +103,25 @@
       <div class="row additional-token-metrics px-3">
         <h3>{{gettext("Additional Token Metrics")}}</h3>
         <div class="d-flex flex-column flex-md-row flex-md-wrap metric-holder">
-          <div class="metric">
+          <div class="metric d-flex flex-column">
             <div class="name">{{gettext("Total number of unique wallets")}}</div>
             <div class="value">{{ogn_stats.number_of_addresses_formatted}}</div>
           </div>
-          <div class="metric">
-            <div class="name">{{gettext("Total number of SAFT / presale investors")}}</div>
-            <div class="value">265,023</div>
+          <div class="metric d-flex flex-column">
+            <div class="name">{{gettext("Total number of presale investors")}}</div>
+            <div class="value">700</div>
           </div>
-          <div class="metric">
-            <div class="name">{{gettext("Length of vesting schedule for SAFTS")}}</div>
-            <div class="value">2 years</div>
+          <div class="metric d-flex flex-column bigger">
+            <div class="name">{{gettext("Presale investor vesting schedule length")}}</div>
+            <div class="value">2+ years</div>
           </div>
-          <div class="metric">
-            <div class="name">{{gettext("Length of vesting schedule for team*")}}</div>
-            <div class="value">2 years</div>
+          <div class="metric d-flex flex-column">
+            <div class="name">{{gettext("Team vesting schedule length*")}}</div>
+            <div class="value">4-6 years</div>
           </div>
-          <div class="metric">
-            <div class="name">{{gettext("Average SAFT size in USD")}}</div>
-            <div class="value">$532,032</div>
+          <div class="metric d-flex flex-column">
+            <div class="name">{{gettext("Average presale purchase size in USD")}}</div>
+            <div class="value">$54,346</div>
           </div>
         </div>
         <div class="subtitle">{{gettext("* Founders signed new 4 year vesting schedule on Jan 8 2020")}}</div>
@@ -163,58 +163,71 @@
             </div>
           </div>
 
+          <div class="subtitle2">{{gettext("Last updated on ")}}{{ogn_stats["created_at_formatted"]}}</div>
+
         </div>
         <div class="col-lg-6 mt-5 mt-lg-0">
           <h3>{{gettext("Wallets excluded from circulating supply")}}</h3>
 
           <div class="reserved-wallets">
-
             <div class="reserved-wallet">
               <div class="wallet-name">{{gettext("Foundation Reserves")}}</div>
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.foundation_reserve_address}}" target="_blank" rel="noopener noreferrer">
-                <div class="wallet-address d-none d-md-block">{{ogn_stats.foundation_reserve_address}}</div>
-                <div class="wallet-address d-md-none">{{ogn_stats.foundation_reserve_address[:6]}}...{{ogn_stats.foundation_reserve_address[-4:]}}</div>
+                <div class="wallet-address d-none">{{ogn_stats.foundation_reserve_address}}</div>
+                <div class="wallet-address">{{ogn_stats.foundation_reserve_address[:6]}}...{{ogn_stats.foundation_reserve_address[-4:]}}</div>
               </a>
+              <div class="wallet-balance">{{ogn_stats.foundation_reserve_balance_formatted}} OGN</div>
+              <div class="placeholder">&nbsp;</div>
             </div>
 
             <div class="reserved-wallet">
               <div class="wallet-name">{{gettext("Team Distribution")}}</div>
-            <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.team_dist_address}}" target="_blank" rel="noopener noreferrer">
-              <div class="wallet-address d-none d-md-block">{{ogn_stats.team_dist_address}}</div>
-              <div class="wallet-address d-md-none">{{ogn_stats.team_dist_address[:6]}}...{{ogn_stats.team_dist_address[-4:]}}</div>
+              <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.team_dist_address}}" target="_blank" rel="noopener noreferrer">
+                <div class="wallet-address d-none">{{ogn_stats.team_dist_address}}</div>
+                <div class="wallet-address">{{ogn_stats.team_dist_address[:6]}}...{{ogn_stats.team_dist_address[-4:]}}</div>
               </a>
+              <div class="wallet-balance">{{ogn_stats.team_dist_balance_formatted}} OGN</div>
+              <div class="placeholder">&nbsp;</div>
             </div>
 
             <div class="reserved-wallet">
               <div class="wallet-name">{{gettext("Investor Distribution")}}</div>
-            <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.investor_dist_address}}" target="_blank" rel="noopener noreferrer">
-              <div class="wallet-address d-none d-md-block">{{ogn_stats.investor_dist_address}}</div>
-              <div class="wallet-address d-md-none">{{ogn_stats.investor_dist_address[:6]}}...{{ogn_stats.investor_dist_address[-4:]}}</div>
+              <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.investor_dist_address}}" target="_blank" rel="noopener noreferrer">
+                <div class="wallet-address d-none">{{ogn_stats.investor_dist_address}}</div>
+                <div class="wallet-address">{{ogn_stats.investor_dist_address[:6]}}...{{ogn_stats.investor_dist_address[-4:]}}</div>
               </a>
+              <div class="wallet-balance">{{ogn_stats.investor_dist_balance_formatted}} OGN</div>
+              <div class="placeholder">&nbsp;</div>
             </div>
 
             <div class="reserved-wallet">
               <div class="wallet-name">{{gettext("Distribution Staging")}}</div>
-            <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.dist_staging_address}}" target="_blank" rel="noopener noreferrer">
-              <div class="wallet-address d-none d-md-block">{{ogn_stats.dist_staging_address}}</div>
-              <div class="wallet-address d-md-none">{{ogn_stats.dist_staging_address[:6]}}...{{ogn_stats.dist_staging_address[-4:]}}</div>
+              <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.dist_staging_address}}" target="_blank" rel="noopener noreferrer">
+                <div class="wallet-address d-none">{{ogn_stats.dist_staging_address}}</div>
+                <div class="wallet-address">{{ogn_stats.dist_staging_address[:6]}}...{{ogn_stats.dist_staging_address[-4:]}}</div>
               </a>
+              <div class="wallet-balance">{{ogn_stats.dist_staging_balance_formatted}} OGN</div>
+              <div class="placeholder">&nbsp;</div>
             </div>
 
             <div class="reserved-wallet">
               <div class="wallet-name">{{gettext("Partnerships")}}</div>
-            <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.partnerships_address}}" target="_blank" rel="noopener noreferrer">
-              <div class="wallet-address d-none d-md-block">{{ogn_stats.partnerships_address}}</div>
-              <div class="wallet-address d-md-none">{{ogn_stats.partnerships_address[:6]}}...{{ogn_stats.partnerships_address[-4:]}}</div>
+              <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.partnerships_address}}" target="_blank" rel="noopener noreferrer">
+                <div class="wallet-address d-none">{{ogn_stats.partnerships_address}}</div>
+                <div class="wallet-address">{{ogn_stats.partnerships_address[:6]}}...{{ogn_stats.partnerships_address[-4:]}}</div>
               </a>
+              <div class="wallet-balance">{{ogn_stats.partnerships_balance_formatted}} OGN</div>
+              <div class="placeholder">&nbsp;</div>
             </div>
 
             <div class="reserved-wallet">
               <div class="wallet-name">{{gettext("Ecosystem Growth")}}</div>
-            <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.ecosystem_growth_address}}" target="_blank" rel="noopener noreferrer">
-              <div class="wallet-address d-none d-md-block">{{ogn_stats.ecosystem_growth_address}}</div>
-              <div class="wallet-address d-md-none">{{ogn_stats.ecosystem_growth_address[:6]}}...{{ogn_stats.ecosystem_growth_address[-4:]}}</div>
+              <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.ecosystem_growth_address}}" target="_blank" rel="noopener noreferrer">
+                <div class="wallet-address d-none">{{ogn_stats.ecosystem_growth_address}}</div>
+                <div class="wallet-address">{{ogn_stats.ecosystem_growth_address[:6]}}...{{ogn_stats.ecosystem_growth_address[-4:]}}</div>
               </a>
+              <div class="wallet-balance">{{ogn_stats.ecosystem_growth_balance_formatted}} OGN</div>
+              <div class="placeholder">&nbsp;</div>
             </div>
 
           </div>
