--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -237,6 +237,79 @@
     </div>
   </section>
 
+  <section class="exchanges-section white-section">
+    <div class="container">
+      <h3>{{gettext("OGN is listed on")}}</h3>
+      <div class="d-flex exchanges flex-column flex-md-row align-items-center justify-content-between">
+
+        <div class="token-exchange">
+          <a target="_blank" rel="noopener noreferrer"
+            href="https://www.binance.com/{{binance_lang_code}}/register?ref=38914658">
+            <img src="/static/img/ognToken/binance.svg" />
+          </a>
+        </div>
+        <div class="token-exchange larger">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.huobi.com/en-us/exchange/ogn_usdt/">
+            <img src="/static/img/ognToken/huobi.png" />
+          </a>
+        </div>
+        <div class="token-exchange">
+          <a target="_blank" rel="noopener noreferrer" href="https://coinone.co.kr/">
+            <img src="/static/img/ognToken/coinone.svg" />
+          </a>
+        </div>
+        <div class="token-exchange larger">
+          <a target="_blank" rel="noopener noreferrer" href="https://upbit.com/exchange?code=CRIX.UPBIT.BTC-OGN">
+            <img src="/static/img/ognToken/upbit.png" />
+          </a>
+        </div>
+        <div class="token-exchange">
+          <a target="_blank" rel="noopener noreferrer" href="#">
+            <img src="/static/img/ognToken/gopax.svg" />
+          </a>
+        </div>
+        <div class="token-exchange medium">
+          <a target="_blank" rel="noopener noreferrer" href="https://crypto.com/">
+            <img src="/static/img/ognToken/cryptocom-logo.svg" />
+          </a>
+        </div>
+      </div>
+      <div class="d-flex exchanges flex-column flex-md-row align-items-center justify-content-between mb-5">
+        <div class="token-exchange">
+          <a target="_blank" rel="noopener noreferrer" href="https://global.bittrex.com/">
+            <img src="/static/img/ognToken/bittrex-logo.svg" />
+          </a>
+        </div>
+        <div class="token-exchange">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.mxc.com/trade/pro#OGN_USDT">
+            <img src="/static/img/ognToken/mxc.svg" />
+          </a>
+        </div>
+        <div class="token-exchange xxl">
+          <a target="_blank" rel="noopener noreferrer" href="https://kyberswap.com/swap/eth-ogn">
+            <img src="/static/img/ognToken/kyber.svg" />
+          </a>
+        </div>
+        <div class="token-exchange">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.biki.com/trade/OGN_USDT">
+            <img src="/static/img/ognToken/biki.svg" />
+          </a>
+        </div>
+        <div class="token-exchange">
+          <a target="_blank" rel="noopener noreferrer" href="https://tokocrypto.com/id/dashboard/OGNIDR">
+            <img src="/static/img/ognToken/tokocrypto.svg" />
+          </a>
+        </div>
+        <div class="token-exchange large">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.hotbit.io/exchange?symbol=OGN_USDT">
+            <img src="/static/img/ognToken/hotbit.svg" />
+          </a>
+        </div>
+      </div>
+      <a target='_blank' rel='noreferrer noopener' href="https://coinmarketcap.com/currencies/origin-protocol/markets">{{gettext("See more on Coinmarketcap >")}}</a>
+    </div>
+  </section>
+
   {% include 'footer.html' %}
 </main>
 
