--- a/static/css/pages/landing.css
+++ b/static/css/pages/landing.css
@@ -98,8 +98,9 @@
   margin-bottom: 32px;
 }
 
+.countdown-block-TEMPHIDE .clock-title,
 .countdown-block .clock-title {
-  max-width: 756px;  
+  max-width: 756px;
 }
 
 .countdown-block .clock {
