--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -174,7 +174,8 @@
               <div class="wallet-name">{{gettext("Foundation Reserves")}}</div>
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.foundation_reserve_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.foundation_reserve_address}}</div>
-                <div class="wallet-address">{{ogn_stats.foundation_reserve_address[:6]}}...{{ogn_stats.foundation_reserve_address[-4:]}}</div>
+                <div class="wallet-address d-md-none">{{ogn_stats.foundation_reserve_address[:6]}}...{{ogn_stats.foundation_reserve_address[-4:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.foundation_reserve_address[:11]}}...{{ogn_stats.foundation_reserve_address[-8:]}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.foundation_reserve_balance_formatted}} OGN</div>
               <div class="placeholder">&nbsp;</div>
@@ -184,7 +185,8 @@
               <div class="wallet-name">{{gettext("Team Distribution")}}</div>
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.team_dist_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.team_dist_address}}</div>
-                <div class="wallet-address">{{ogn_stats.team_dist_address[:6]}}...{{ogn_stats.team_dist_address[-4:]}}</div>
+                <div class="wallet-address d-md-none">{{ogn_stats.team_dist_address[:6]}}...{{ogn_stats.team_dist_address[-4:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.team_dist_address[:11]}}...{{ogn_stats.team_dist_address[-8:]}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.team_dist_balance_formatted}} OGN</div>
               <div class="placeholder">&nbsp;</div>
@@ -194,7 +196,8 @@
               <div class="wallet-name">{{gettext("Investor Distribution")}}</div>
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.investor_dist_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.investor_dist_address}}</div>
-                <div class="wallet-address">{{ogn_stats.investor_dist_address[:6]}}...{{ogn_stats.investor_dist_address[-4:]}}</div>
+                <div class="wallet-address d-md-none">{{ogn_stats.investor_dist_address[:6]}}...{{ogn_stats.investor_dist_address[-4:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.investor_dist_address[:11]}}...{{ogn_stats.investor_dist_address[-8:]}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.investor_dist_balance_formatted}} OGN</div>
               <div class="placeholder">&nbsp;</div>
@@ -204,7 +207,8 @@
               <div class="wallet-name">{{gettext("Distribution Staging")}}</div>
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.dist_staging_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.dist_staging_address}}</div>
-                <div class="wallet-address">{{ogn_stats.dist_staging_address[:6]}}...{{ogn_stats.dist_staging_address[-4:]}}</div>
+                <div class="wallet-address d-md-none">{{ogn_stats.dist_staging_address[:6]}}...{{ogn_stats.dist_staging_address[-4:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.dist_staging_address[:11]}}...{{ogn_stats.dist_staging_address[-8:]}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.dist_staging_balance_formatted}} OGN</div>
               <div class="placeholder">&nbsp;</div>
@@ -214,7 +218,8 @@
               <div class="wallet-name">{{gettext("Partnerships")}}</div>
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.partnerships_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.partnerships_address}}</div>
-                <div class="wallet-address">{{ogn_stats.partnerships_address[:6]}}...{{ogn_stats.partnerships_address[-4:]}}</div>
+                <div class="wallet-address d-md-none">{{ogn_stats.partnerships_address[:6]}}...{{ogn_stats.partnerships_address[-4:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.partnerships_address[:11]}}...{{ogn_stats.partnerships_address[-8:]}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.partnerships_balance_formatted}} OGN</div>
               <div class="placeholder">&nbsp;</div>
@@ -224,7 +229,8 @@
               <div class="wallet-name">{{gettext("Ecosystem Growth")}}</div>
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.ecosystem_growth_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.ecosystem_growth_address}}</div>
-                <div class="wallet-address">{{ogn_stats.ecosystem_growth_address[:6]}}...{{ogn_stats.ecosystem_growth_address[-4:]}}</div>
+                <div class="wallet-address d-md-none">{{ogn_stats.ecosystem_growth_address[:6]}}...{{ogn_stats.ecosystem_growth_address[-4:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.ecosystem_growth_address[:11]}}...{{ogn_stats.ecosystem_growth_address[-8:]}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.ecosystem_growth_balance_formatted}} OGN</div>
               <div class="placeholder">&nbsp;</div>
