--- a/templates/landing.html
+++ b/templates/landing.html
@@ -40,7 +40,7 @@
   <!-- Countdown section -->
   <div class="countdown-block-TEMPHIDE d-flex flex-column justify-content-between align-items-center" style='background-color:white'>
     {% if OGN_ALREADY_LAUNCHED %}
-      <h1 class="clock-title">{{gettext("Origin Tokens have launched!")}}</h1>
+      <h1 class="clock-title">{{gettext("Be the first to hear when we launch new products, and announce important partnerships!")}}</h1>
     {% else %}
       <h1 class="clock-title mb-0">{{gettext("Participate in the Origin Token (OGN) distribution")}}</h1>
       <div class="clock d-flex align-items-center justify-content-center mt-0">
@@ -172,87 +172,80 @@
     <h1 class="segment-title ml-4 mr-4">{{gettext("Featured Partners")}}</h1>
     <div class="container">
       <div class="col-12">
-      <div
-        id="featuredPartners"
-        class="carousel slide"
-        data-touch="true"
-        data-ride="carousel"
-      >
-        <ol class="carousel-indicators">
-          <li
-            data-target="#featuredPartners"
-            data-slide-to="0"
-            class="active"
-          ></li>
-          <li data-target="#featuredPartners" data-slide-to="1"></li>
-          <li data-target="#featuredPartners" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div
-              class="featured-investor d-flex flex-column-reverse flex-md-row"
-            >
-              <div class="investor-data col-md-6">
-                <div class="investor-quote">
-                  {{gettext("“The short-term rentals space is exploding and needs more innovation and competition. A neutral and open platform will empower renters, hosts, and channel partners. We are excited to partner with Origin to create this new wave of innovation in homesharing.”")}}
-                </div>
-                <div class="investor-info">
-                  <div class="investor-name">
-                    {{gettext("Luca De Giglio")}}
-                  </div>
-                  <div class="investor-title">
-                    {{gettext("Founder, Trips Community")}}
+        <div
+          id="featuredPartners"
+          class="carousel slide"
+          data-touch="true"
+          data-ride="carousel"
+        >
+          <ol class="carousel-indicators">
+            <li
+              data-target="#featuredPartners"
+              data-slide-to="0"
+              class="active"
+            ></li>
+            <li data-target="#featuredPartners" data-slide-to="1"></li>
+            <!--<li data-target="#featuredPartners" data-slide-to="2"></li>-->
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div
+                class="featured-investor d-flex flex-column-reverse flex-md-row"
+              >
+                <div class="investor-data col-md-6">
+                  <div class="investor-quote">
+                    {{gettext("Origin Marketplace featured in Samsung Blockchain Store")}}
                   </div>
                 </div>
-              </div>
-              <div class="investor-image col-md-6 p-0 d-flex">
-                <img src="/static/img/landing/luca-photo2@3x.jpg" />
+                <div class="investor-image col-md-6 p-0 d-flex">
+                  <img src="/static/img/landing/samsungStoreSmall.png" />
+                </div>
               </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <div
-              class="featured-investor d-flex flex-column-reverse flex-md-row"
-            >
-              <div class="investor-data col-md-6">
-                <div class="investor-quote">
-                  {{gettext("“The short-term rentals space is exploding and needs more innovation and competition. A neutral and open platform will empower renters, hosts, and channel partners. We are excited to partner with Origin to create this new wave of innovation in homesharing.”")}}
-                </div>
-                <div class="investor-info">
-                  <div class="investor-name">
-                    {{gettext("Luca De Giglio")}}
+            <div class="carousel-item">
+              <div
+                class="featured-investor d-flex flex-column-reverse flex-md-row"
+              >
+                <div class="investor-data col-md-6">
+                  <div class="investor-quote">
+                    {{gettext("“The short-term rentals space is exploding and needs more innovation and competition. A neutral and open platform will empower renters, hosts, and channel partners. We are excited to partner with Origin to create this new wave of innovation in homesharing.”")}}
                   </div>
-                  <div class="investor-title">
-                    {{gettext("Founder, Trips Community")}}
+                  <div class="investor-info">
+                    <div class="investor-name">
+                      {{gettext("Luca De Giglio")}}
+                    </div>
+                    <div class="investor-title">
+                      {{gettext("Founder, Trips Community")}}
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="investor-image col-md-6 p-0 d-flex">
-                <img src="/static/img/landing/luca-photo2@3x.jpg" />
+                <div class="investor-image col-md-6 p-0 d-flex">
+                  <img src="/static/img/landing/luca-photo2@3x.jpg" />
+                </div>
               </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <div
-              class="featured-investor d-flex flex-column-reverse flex-md-row"
-            >
-              <div class="investor-data col-md-6">
-                <div class="investor-quote">
-                  {{gettext("“The short-term rentals space is exploding and needs more innovation and competition. A neutral and open platform will empower renters, hosts, and channel partners. We are excited to partner with Origin to create this new wave of innovation in homesharing.”")}}
+            <!--<div class="carousel-item">
+              <div
+                class="featured-investor d-flex flex-column-reverse flex-md-row"
+              >
+                <div class="investor-data col-md-6">
+                  <div class="investor-quote">
+                    {{gettext("“The short-term rentals space is exploding and needs more innovation and competition. A neutral and open platform will empower renters, hosts, and channel partners. We are excited to partner with Origin to create this new wave of innovation in homesharing.”")}}
+                  </div>
+                  <div class="investor-info">
+                    <div class="investor-name">
+                      {{gettext("Luca De Giglio")}}
+                    </div>
+                    <div class="investor-title">
+                      {{gettext("Founder, Trips Community")}}
+                    </div>
+                  </div>
                 </div>
-                <div class="investor-info">
-                  <div class="investor-name">
-                    {{gettext("Luca De Giglio")}}
-                  </div>
-                  <div class="investor-title">
-                    {{gettext("Founder, Trips Community")}}
-                  </div>
+                <div class="investor-image col-md-6 p-0 d-flex">
+                  <img src="/static/img/landing/luca-photo2@3x.jpg" />
                 </div>
               </div>
-              <div class="investor-image col-md-6 p-0 d-flex">
-                <img src="/static/img/landing/luca-photo2@3x.jpg" />
-              </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
@@ -308,7 +301,6 @@
     </div>
     <a class="white-button-blue-border" target="_blank" rel="noopener noreferrer" href="https://medium.com/originprotocol">{{gettext("Read more on Medium")}}</a>
   </div>
-
   {% include 'footer.html' %}
 </main>
 
