update readme and fix translation

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -146,7 +146,7 @@
           
           <div class="locked-token-widget">
             <div class="title">
-              {{gettext("‘Investors, team members & others with locked tokens")}}
+              {{gettext("Investors, team members & others with locked tokens")}}
             </div>
             <div class="value">
               {{ogn_stats.formatted_staked_user_count}}
