fix another translation

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -71,7 +71,7 @@
         <div class="col-lg-6">
           <h3>{{gettext("Token Unlock Schedule")}}</h3>
           <div class="desc">
-            {{gettext("On January 4, 2020, we released our projected token release schedule. This can also be found in <a href='https://research.binance.com/projects/origin' target='_blank' rel='noreferrer noopener'>Binance's Research Report</a> on Origin. Note that actual actual circulating supply may differ from modeled circulating supply as time passes. It is our intention to decrease actual circulating supply when compared to modeled circulating supply whenever possible.")}}
+            {{gettext("On January 4, 2020, we released our projected token release schedule. This can also be found in <a href='https://research.binance.com/projects/origin' target='_blank' rel='noreferrer noopener'>Binance's Research Report</a> on Origin. Note that actual circulating supply may differ from modeled circulating supply as time passes. It is our intention to decrease actual circulating supply when compared to modeled circulating supply whenever possible.")}}
           </div>
         </div>
         <div class="col-lg-6 mt-5 mt-lg-0">
