Replace Biki with Uniswap

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -296,9 +296,15 @@
             <img src="/static/img/ognToken/kyber.svg" />
           </a>
         </div>
-        <div class="token-exchange">
+        <!-- <div class="token-exchange">
           <a target="_blank" rel="noopener noreferrer" href="https://www.biki.com/trade/OGN_USDT">
             <img src="/static/img/ognToken/biki.svg" />
+          </a>
+        </div> -->
+        <div class="token-exchange">
+          <a target="_blank" rel="noopener noreferrer"
+            href="https://uniswap.exchange/swap?outputCurrency=0x8207c1FfC5B6804F6024322CcF34F29c3541Ae26">
+            <img src="/static/img/ognToken/uniswap.png" />
           </a>
         </div>
         <div class="token-exchange">
