Remove references to Deals

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -131,7 +131,7 @@
         <div class="col-lg-6">
           <h3>{{gettext("Locked Tokens")}}</h3>
           <div class="desc">
-            {{gettext("Many of our investors and team members have voluntarily increased their lock-ups. Locked tokens include tokens that otherwise would have been released and entered the circulating supply. This number also includes OGN that is locked up by users in Origin Deals.")}}
+            {{gettext("Many of our investors and team members have voluntarily increased their lock-ups. Locked tokens include tokens that otherwise would have been released and entered the circulating supply.")}}
           </div>
           
           <div class="locked-token-widget">
