Alternate section backgrounds

--- a/templates/ogn-token.html
+++ b/templates/ogn-token.html
@@ -123,7 +123,7 @@ endwith %}
     </div>
   </section>
 
-  <section class="payments-section">
+  <section class="payments-section grey-section">
     <div class="container">
       <div class="app-showcase d-flex justify-content-center">
         <div class="showcase-content">
@@ -145,7 +145,7 @@ endwith %}
       </div>
     </div>
   </section>
-  <section class="commissions-section grey-section">
+  <section class="commissions-section">
     <div class="container">
       <div class="app-showcase image-first d-flex justify-content-center">
         <div class="showcase-image">
@@ -165,7 +165,7 @@ endwith %}
       </div>
     </div>
   </section>
-  <section class="rewards-section">
+  <section class="rewards-section grey-section">
     <div class="container">
       <div class="app-showcase d-flex justify-content-center">
         <div class="showcase-content higher">
