Repair token page styling

--- a/static/css/pages/token.css
+++ b/static/css/pages/token.css
@@ -228,7 +228,7 @@
 }
 
 .tokens-page .exchanges-section .statistic.blue {
-  background-color: #26d198;
+  background-color: #007cff;
 }
 
 .tokens-page .exchanges-section .statistic .text {
