Update dshop page to link to signup

--- a/templates/dshop.html
+++ b/templates/dshop.html
@@ -16,10 +16,10 @@
         <div class="sub-title">{{gettext("Run and grow your business with Dshop, a customizable and open-source e-commerce platform. Get started for free.")}}</div>
         <a 
           class="primary-button" 
-          href="{{ universal.DSHOP_DEMO_FORM }}"
+          href="https://dshop.originprotocol.com"
           target="_blank"
           rel="noreferrer noopener"
-        >{{ gettext("Request a demo") }}</a>
+        >{{ gettext("Try Dshop") }}</a>
       </div>
       <img src="/static/img/dshop/hero-graphic.svg" class="hero-graphic" />
     </div>
@@ -151,10 +151,10 @@
     <div class="subtitle">{{gettext("Ready to start selling for free?")}}</div>
     <a 
       class="primary-button" 
-      href="{{ universal.DSHOP_DEMO_FORM }}"
+      href="https://dshop.originprotocol.com"
       target="_blank"
       rel="noreferrer noopener"
-    >{{ gettext("Request a demo") }}</a>
+    >{{ gettext("Try Dshop") }}</a>
   </section>
 
   {% include 'footer.html' %}
