--- a/templates/navbar-dshop.html
+++ b/templates/navbar-dshop.html
@@ -22,10 +22,10 @@
             <li class="nav-item">
               <a 
                 class="outline-button" 
-                href="{{ universal.DSHOP_DEMO_FORM }}"
+                href="https://dshop.originprotocol.com"
                 target="_blank"
                 rel="noreferrer noopener"
-              >{{ gettext("Request a demo") }}</a>
+              >{{ gettext("Try Dshop") }}</a>
             </li>
           </ul>
       {% endif %}
