--- a/templates/navbar-dshop.html
+++ b/templates/navbar-dshop.html
@@ -17,6 +17,9 @@
               <a class="nav-link" href="#features">{{ gettext("Features & Benefits") }}</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#integrations">{{ gettext("Integrations") }}</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#customers">{{ gettext("Our Customers") }}</a>
             </li>
             <li class="nav-item">
@@ -25,7 +28,7 @@
                 href="https://dshop.originprotocol.com"
                 target="_blank"
                 rel="noreferrer noopener"
-              >{{ gettext("Try Dshop") }}</a>
+              >{{ gettext("Try it - it's free") }}</a>
             </li>
           </ul>
       {% endif %}
